--- a/css/style.css
+++ b/css/style.css
@@ -222,9 +222,9 @@ h2{
 }
 /* Fin animacion*/
 /**  tabla de la pagina servicios */
-.titulino h2 {
+.titlen {
   text-align: center;
-  margin-top: 3%;
+  padding-top: 3%;
 }
 
 .body {
@@ -232,7 +232,7 @@ h2{
   font-family: "Raleway", Arial, Helvetica, sans-serif;
   text-align: center;
   color: #fefefe;
-  overflow-y: scroll;
+  overflow-y: hidden;
 }
 
 a {
