--- a/css/style.css
+++ b/css/style.css
@@ -15,16 +15,6 @@
   text-decoration: none;
 }
 
-@media (min-width: 600px) {
-  p {
-    font-size: 1.15rem;
-  }
-}
-@media (min-width: 800px) {
-  p {
-    font-size: 1.5rem;
-  }
-}
 .carousel {
   margin-bottom: 2%;
 }
@@ -1546,7 +1536,7 @@ BAR-CHART
   align-self: flex-end;
   align-items: flex-end;
   text-align: left;
-  width: 20%;
+  width: 40%;
   overflow-x: hidden;
 }
 
@@ -1973,7 +1963,19 @@ BAR-CHART
   width: 100%;
 }
 
-/** =====================* Fin de botones universales ========================*/
+/** =====================* Fin de botones universales ========================
+
+@media (min-width: 600px){
+  p{
+ font-size:1.15em}}
+
+ @media (min-width: 800px){
+  p{
+ font-size:1.5em}}
+
+ @media screen and (max width: 700px){
+	.ocultar{ display:none;
+}} */
 .btn-11 {
   background-image: linear-gradient(to top left, #4f000b, #720026, #ce4257, #ff7f51, #ff9b54);
   color: black;
