--- a/scss/componentes/_old.scss
+++ b/scss/componentes/_old.scss
@@ -1350,7 +1350,7 @@ BAR-CHART
     align-self: flex-end;
     align-items: flex-end;
     text-align: left;
-    width: 20%;
+    width: 40%;
     overflow-x: hidden;
   
     }
@@ -1747,5 +1747,16 @@ background-image: linear-gradient(315deg, #f0ecfc 0%, #c797eb 74%);
   width: 100%;
 }
 
-/** =====================* Fin de botones universales ========================*/
+/** =====================* Fin de botones universales ========================
 
+@media (min-width: 600px){
+  p{
+ font-size:1.15em}}
+ 
+ @media (min-width: 800px){
+  p{
+ font-size:1.5em}}
+
+ @media screen and (max width: 700px){
+	.ocultar{ display:none;
+}} */
