--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,10 @@ body {
   font-family: "Mulish", sans-serif;
 }
 
+.cartina {
+  overflow-y: hidden;
+}
+
 .novedades {
   padding: 0%;
   align-content: flex-end;
@@ -1536,6 +1540,7 @@ BAR-CHART
   margin-top: 2%;
   margin-bottom: 2%;
   margin-left: 1%;
+  overflow: hidden;
 }
 
 /* gift de libro footer  */
