--- a/scss/componentes/_old.scss
+++ b/scss/componentes/_old.scss
@@ -1377,8 +1377,9 @@ BAR-CHART
 /** =====================* Comienzo de botones universales ========================*/
 /* botones*/
     .custom-btnn {
-      width: 130px;
-      height: 40px;
+      flex-wrap: wrap;
+      width: 8.125rem;
+      height: 2.5rem;
       color: #fff;
       border-radius: 5px;
       padding: 10px 25px;
@@ -1569,9 +1570,9 @@ BAR-CHART
     
     /* 5 */
     .btn-5 {
-      width: 130px;
-      height: 40px;
-      line-height: 42px;
+      width: 8.125rem;
+      height: 2.5rem;
+      line-height: 2.625rem;
       padding: 0;
       border: none;
       background: rgb(255,27,0);
